compose button aligns correctly, started on a function that will help minimize repetition when counting characters in text input

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -24,8 +24,7 @@
 }
 
 #compose {
-  position: absolute;
-  margin-left: 60em;
+  float: right;
   margin-top: 0.5em;
   width: 7em;
   height: 4em;
